just fix behind of main branch

--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -49,7 +49,8 @@
                 display: flex;
                 position: absolute;
                 z-index: 2;            
-                width: 90%;                                
+                width: 90%;   
+                background-color: red;                             
                 text-align: right;                
                 padding-left: 2%;
                 // padding-right: 1%;
@@ -58,7 +59,7 @@
     
                 summary {
                     font-size: 24px;
-                    color: $defaultColor;                     
+                    color: $defaultColor;     
                     // border: 1px solid red;                   
                 }
     
